syntax = "proto3";
package proto;
option go_package = ".";

import "google/api/annotations.proto";

service UserDataService{
  rpc GetAllUserData(GetAllUserDataReq) returns (GetAllUserDataRes){
    option (google.api.http) = {get: "/data/{userId}"};
  }
}

service AuthService{
  rpc Register(RegisterReq) returns(RegisterRes){
    option (google.api.http) = {post: "/auth/register" body: "*"};
  }
  rpc Login(LoginReq) returns(LoginRes){
    option (google.api.http) = {post: "/auth/login"};
  }
  rpc Validate(ValidateReq) returns(ValidateRes){
    option (google.api.http) = {post: "/auth/validate"};
  }
  rpc GetData(GetDataReq) returns (GetDataRes){}
}

service UserService{
  rpc UpdateUser(UpdateUserReq) returns(UpdateUserRes){
    option (google.api.http) = {patch: "/account/{user.UserID}" body: "*"};
  }
  rpc DeleteUser(DeleteUserReq) returns(DeleteUserRes){
    option (google.api.http) = {delete: "/account/{userId}"};
  }
  rpc GetUser(GetUserReq) returns (GetUserRes);
}

service TrendService{
  rpc GetTrend(GetTrendReq) returns(GetTrendRes){
    option (google.api.http) = {get: "/trend/{Trend}"};
  }
}

service TweetService{
  rpc ReturnTweet(ReturnTweetReq) returns(ReturnTweetRes){
    option (google.api.http) = {get: "/tweet/{TweetID}"};
  }
  rpc PostTweet(PostTweetReq) returns(PostTweetRes){
    option (google.api.http) = {post: "/tweet" body: "*"};
  }
  rpc ReturnAll(ReturnAllReq) returns (ReturnAllRes);
}

//UserDataService
message User {
  string UserID = 1;
  string Email = 2;
  string password = 3;
  string Username = 4 ;
}

message AuthData{
  string id = 1;
  string email = 2;
  string password = 3;
}

message TweetData{
  string UserID = 1;
  string Username = 2;
  string Body = 3;
}

message AllUserData{
  User user = 1;
  AuthData authData = 2;
  repeated TweetData tweetData = 3;
}

message GetAllUserDataReq{string userId = 1;}
message GetAllUserDataRes{AllUserData allUserData = 1;}

//AuthService
//Register
message RegisterReq{string email = 1; string password = 2; bool dataPermission = 3;}
message RegisterRes{string status = 1;}

//Login
message LoginReq{string email = 1; string password = 2;}
message LoginRes{string status = 1; string access_token = 2;}

//Validate
message ValidateReq{string token = 1; string userid = 2;}
message ValidateRes{string status = 1; string userid = 2;}

//GetData
message GetDataReq{string userId = 1;}
message GetDataRes{AuthData authData = 1;}

//AccountService
//GetUser
message GetUserReq{string UserID = 1;}
message GetUserRes{User user = 1;}

//UpdateUser
message UpdateUserReq{User user = 1;}
message UpdateUserRes{User user = 1;}

//DeleteUser
message DeleteUserReq{string userId = 1;}
message DeleteUserRes{string status = 1;}

//TrendService
message Trends{
  string UserID = 1;
  string Username = 2;
  string Body = 3;
  repeated string Trend = 4;
}

//GetTrend
message GetTrendReq{string Trend = 1;}
message GetTrendRes{repeated Trends tweets = 1;}

//TweetService
message Tweet{
  string UserID = 1;
  string Username = 2;
  string Body = 3;
}

//ReturnAll
message ReturnAllReq{string userId = 1;}
message ReturnAllRes{repeated TweetData tweetData = 1;}

//ReturnTweet
message ReturnTweetReq{string TweetID = 1;}
message ReturnTweetRes{Tweet tweet = 1;}

//PostTweet
message PostTweetReq{Tweet tweet = 1;}
message PostTweetRes{Tweet tweet = 1;}